[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-tool-harness"
version = "0.1.0"
description = "Pure standard-library MCP tool harness core models and registry."
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
include = ["mcp_tool_harness*"]

[tool.setuptools.package-data]
"mcp_tool_harness.server" = ["console/*.html", "console/*.css", "console/*.js"]
